--- a/main.html
+++ b/main.html
@@ -3,10 +3,42 @@
 <html>
 
 <head>
+	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width,initial-scale=1.0">
 	<link rel="stylesheet" href="styles.css">
+	<title>Student Details</title>
+
+	<style>
+		table,tr,th,td{
+			background-color:yellow;
+			border:1px solid black;
+		}
+		
+	</style>
 </head>
 
 <body>
+
+	<h2>Student Details</h2>
+	<table>
+		<tr>
+			<th>NAME</th>
+			<th>AGE</th>
+			<th>BRANCH</th>
+		</tr>
+
+		<tr>
+			<td>Shaw</th>
+			<td>20/th>
+			<td>CSE</th>
+		</tr>
+
+		<tr>
+			<td>Adil</th>
+			<td>21/th>
+			<td>ECE</th>
+		</tr>
+	</table>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
