--- a/main.html
+++ b/main.html
@@ -9,6 +9,11 @@
 	<title>Student Details</title>
 
 	<style>
+		*{
+			padding:0;
+			margin:0;
+		}
+
 		table,tr,th,td{
 			background-color:yellow;
 			border:1px solid black;
@@ -18,8 +23,7 @@
 </head>
 
 <body>
-
-	<h2>Student Details</h2>
+	<caption>Student Details</caption>
 	<table>
 		<tr>
 			<th>NAME</th>
