--- a/main.html
+++ b/main.html
@@ -33,15 +33,15 @@
 		</tr>
 
 		<tr>
-			<td>Shaw</th>
-			<td>20/th>
-			<td>CSE</th>
+			<td>Shaw</td>
+			<td>20</td>
+			<td>CSE</td>
 		</tr>
 
 		<tr>
-			<td>Adil</th>
-			<td>21/th>
-			<td>ECE</th>
+			<td>Adil</td>
+			<td>21</td>
+			<td>ECE</td>
 		</tr>
 	</table>
 	<!-- the entire body must be written by student -->
